--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      
   
   </head>
-  <img src="cactus.jpg" alt="Minimalist cactus in a pot">
+  <img src="Cactus.jpg" alt="Minimalist cactus in a pot">
  
   <body>
     <div>
